--- a/style.css
+++ b/style.css
@@ -1,1 +1,46 @@
 /* CSS of RESERVIA Page */
+
+body {
+    display: flex;
+    justify-content: center;
+    font-family: 'Raleway', sans-serif;
+
+}
+.widthSite {
+    display: flex;
+    width: 1340px;
+
+}
+
+header {
+    padding : 52px 10px 52px 10px;
+    width: 100%;
+    height: 100%;
+    display : flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+/* Navigation Bar */
+
+.navBar li {
+    display : flex;
+}
+
+.navBar a{
+    text-decoration: none;
+    color: black;
+}
+
+.navBar a:active{
+    outline: none;
+    text-decoration: none;
+    color: #0065FC;
+
+}
+
+.subscribeLink a{
+    font-weight: 1000;
+    color: #0065FC;
+}
