--- a/style.css
+++ b/style.css
@@ -4,28 +4,38 @@ body {
     display: flex;
     justify-content: center;
     font-family: 'Raleway', sans-serif;
+    font-size: 1em;
 
 }
+
+/*Where we define the width of the website*/
 .widthSite {
-    display: flex;
     width: 1340px;
-
+    padding : 0 54px 0 54px;
 }
+/*----------*/
+
+h1 {
+    font-weight : 900;
+    font-size: 1.45em;
+}
+
 
 header {
-    padding : 52px 10px 52px 10px;
+    padding : 52px 0px 52px 0px;
     width: 100%;
-    height: 100%;
     display : flex;
     justify-content: space-between;
     align-items: center;
 
+
 }
 
-/* Navigation Bar */
+/* Navigation Bar*/
 
 .navBar li {
     display : flex;
+    font-size: 1em;
 }
 
 .navBar a{
@@ -41,6 +51,60 @@ header {
 }
 
 .subscribeLink a{
-    font-weight: 1000;
+    font-weight: bold;
     color: #0065FC;
+}
+/*----------*/
+
+/* Search Section */
+
+.searchBar  {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+p {
+    font-size: 1em
+}
+
+.locationIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f2f2f2;
+    height: 50px;
+    width: 52px;
+    border-radius: 10px 0px 0px 10px;
+    border-top: solid #f2f2f2 1px;
+    border-right: none;
+    border-bottom: solid #f2f2f2 1px;
+    border-left: solid #f2f2f2 1px; 
+    }
+
+input{
+    height: 50px;
+    width: 234px;
+    font-size: 1em;
+    padding: 0px 0px 0px 17px;
+    border-top: solid #f2f2f2 1px;
+    border-right: none;
+    border-bottom: solid #f2f2f2 1px;
+    border-left: none;
+}
+
+.searchBar button{
+    background-color: #0065FC;
+    height: 50px;
+    width: 134px;
+    /*Text inside button*/
+        color: white;
+        font-size: .75em;
+        font-weight: 500;
+    border-radius: 0 10px 10px 0px;
+    border-top: solid #f2f2f2 1px;
+    border-right: solid #f2f2f2 1px;
+    border-bottom: solid #f2f2f2 1px;
+    border-left: none;
 }
