--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ h2 {
     padding: 0px
 }
 
+p {
+    margin: 0px;
+    padding: 0px
+}
+
 /*Where we define the width of the website*/
 .widthSite {
     width: 1340px;
@@ -195,6 +200,7 @@ input:focus {
         border-bottom : solid #0065FC 2px;
         border-left : solid #0065FC 2px;
         background: rgba(0, 101, 252,.04);
+        font-size: 1.09em;
     }
 
     /* showResultNb */
@@ -223,7 +229,8 @@ input:focus {
     /* accommodations */
     
     .accommodations {
-        display: flex;    
+        display: flex;
+        margin-top: 37px;
     }
     .accommodationsBox {
         background-color: #f2f2f2;
@@ -240,36 +247,54 @@ input:focus {
         flex: 3;
     }
 
-    .accommodationPopular {
-        display: flex;
-        align-items: center;
-    }
-
     /* Cards */
-    .horizontalCards {
+
+    .cards {
+        display: flex;
+        flex-direction: column;
+        align-self: flex-end;
         width: 235px;
         background-color: white;
-        border-radius: 10%;
+        border-radius: 25px;
         border: solid white 5px;
         box-shadow: 0px 5px 10px rgb(187, 186, 186);
         margin-top: 15px;
         margin-bottom: 15px;
-        padding-bottom: 11px;
     }
-
-    .horizontalCards img {
+    
+    .cards img {
         border-radius: 20px 20px 0px 0px;
         width: 100%;
         height: 114px;
         object-fit: cover;
     }
 
-    .horizontalCards .text {
-        border-radius: 25px 25px 0px 0px;
-        width: 235px;
-        padding: 0px 8px 0px 8px;
-        margin-top: 12px;
+    .cards h2 {
+        font-size: 1.2em;
+        margin: 12px 0 0 0;
     }
+
+    .cards .text {
+        display: flex;
+        flex-direction: column;
+        width: 235px;
+        margin: 0px 8px 0px 8px;
+    }
+
+    .cards .stars {
+        display: flex;
+    }
+
+    .cards .stars i{
+        margin : 0px 2px 0px 0px;
+        color: #0065FC;
+    }
+
+    .cards .stars .grey i{
+        color: #d9d9d9;
+    }
+
+
 
     /* Accommodation Available */
     .accommodationAvailable {
@@ -279,8 +304,8 @@ input:focus {
         margin-bottom: 28px;  
     }
 
-    .accommodationAvailable h2 {
-        font-size: 1em;
+    .accommodationAvailable .cards p {
+        padding: 12px 0px 0px 0px;
     }
 
     .accommodationsBox a {
@@ -293,4 +318,46 @@ input:focus {
     .accommodationsBox a:hover {
         color: #0065FC;
         text-decoration:underline;
+    }
+
+    .accommodationAvailable .cards .stars{
+        margin : 26px 0 0 0;
+        padding : 0
+    }
+    
+    /* Accommodation Popular */
+
+    .accommodationPopular {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content:space-between;    
+        margin-bottom: 28px;  
+    }
+
+    .accommodationPopular .cards {
+        flex-direction: row;
+        width: 333px;
+        margin-bottom: 18px;
+    }
+
+    .accommodationPopular .cards img {
+        align-content: center;
+        border-radius: 20px 0px 0px 20px;
+        width: 127px;
+        height: 134px;
+        object-fit: cover;
+    }
+
+    .accommodationPopular .cards .text {
+        width: 206px;
+        margin-right: 19px;
+    }
+
+    .accommodationPopular .cards .text p {
+        margin-top: 7px;
+    }
+
+    .accommodationPopular .cards .stars{
+        margin-top : 41px;
+        padding : 0;
     }
