--- a/style.css
+++ b/style.css
@@ -393,3 +393,53 @@ input:focus {
         .accommodationPopular .cards .stars{
             margin-top : 41px;
         }
+
+
+
+        #activities {
+            margin-top: 61px;
+        }
+
+        .activitiesBox {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            margin-top: 20px;
+        }
+
+        .activitiesBox .cards{
+            width: 302px;
+            border:none;
+            margin: 0;
+        }
+
+        .activitiesBox h2{
+            margin: 23px 20px 20px 20px;
+            font-size: 1em;
+        }
+
+        .activitiesBox .column1 .cards img {
+            height: 390px;
+        }
+
+        .activitiesBox .column2, .column4  {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .activitiesBox .column2 .cards .img1{
+            height:180px;
+        }
+
+        .activitiesBox .column2 .cards .img2{
+            height:108px;
+        }
+
+        .activitiesBox .column4 .cards .img3{
+            height:140px;
+        }
+
+        .activitiesBox .column4 .cards .img4{
+            height:153px;
+        }
