--- a/style.css
+++ b/style.css
@@ -121,136 +121,124 @@ a:active {
         margin-top: 8px ;
     }
 
-    .searchBar  {
-        width: 100%;
+/*Search Bar*/
+    
+    .searchBarContainer {
         display: flex;
-        justify-content: flex-start;
-        align-items: center;
         margin-top: 20px ;
     }
 
-    .locationIcon {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #f2f2f2;
-        height: 50px;
-        width: 52px;
-        border-radius: 10px 0px 0px 10px;
-        border: solid #f2f2f2 1px;
-        border-right: none;
+        .searchBar {
+            background-color: #f2f2f2;
+            border: solid #f2f2f2 2px;
+            border-radius: 20px;
+            display:flex;
+            align-items: center;
         }
 
-    input{
-        height: 50px;
-        width: 234px;
-        font-size: 1em;
-        font-weight: 700;
-        padding: 0px 0px 0px 17px;
-        border: solid #f2f2f2 1px;
-        border-right: none;
-        border-left: none;
-    }
+        .searchBar i {
+            width: 52px;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-    input::placeholder {
-        font-size : medium;
-        font-weight: 400;
-    }
-
-    input:focus {
-        outline: none;
-    }
-
-    .searchBar button{
-        background-color: #0065FC;
-        height: 52px;
-        width: 136px;
-        /*Text inside button*/
-            color: white;
+        input{
+            height: 50px;
+            width: 234px;
             font-size: 1em;
+            font-weight: 700;
+            padding: 0px 0px 0px 17px;
+            border: solid #f2f2f2 1px;
+            border-right: none;
+            border-left: none;
+        }
+
+        input::placeholder {
+            font-size : medium;
+            font-weight: 400;
+        }
+
+        input:focus {
+            outline: none;
+        }
+
+
+        .searchBar button {
+            width: 136px;
+            height: 100%;
+            background-color: #0065FC;
+            color: white;
             font-weight: 800;
-        border-radius: 0 20px 20px 0px;
-        border-top: solid #f2f2f2 1px;
-        border-right: solid #f2f2f2 1px;
-        border-bottom: solid #f2f2f2 1px;
-        border-left: none;
-    }
-
-        span.icon {
-            display:none
-        }
-        span.text {
-            display:inline-block
+            font-size: 1em;
+            border: none;
+            border-radius: 0 20px 20px 0;
         }
 
-    .searchBar button:hover{
-        cursor:pointer;
-    }
+            span.mobile {
+                display:none
+            }
+            span.web {
+                display:inline-block
+            }
+
+        .searchBar button:hover{
+            cursor:pointer;
+        }
 
 /*-- Section 2 Results */
 
     /* Filter */
-    #results {
+    #section2 {
         margin-top:17px;
 }
 
     .filter {
         display: flex;
+        flex-wrap: wrap;
+        align-items: center;  
+    }
+    .filterButton {
+        display: flex;
+        align-items:center;
+        border-radius: 50px;
+        border: solid #f2f2f2 2px;
+        height:50px;
+        margin: 5px 12px 5px 12px;
+        transition-duration: 0.3s
+}
+
+    .filterButton i{ 
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
         align-items: center;
+        border-radius: 50%;
+        color: #0065FC;
+        background-color: #DEEBFF;
+    }
+
+    .filterButton:hover {
+        border : solid #0065FC 2px;
+        background-color: #ffffff;
+        cursor:pointer;
+        
+    }
+
+    .filterButton p{
+        padding: 0px 22px 0px 13px;
+        font-size: 1,35em;
+        font-weight: 700;
     }
 
     .filter h2 {
-        margin-right: 10px;
+        margin-right: 19px;
         font-size: 1.25em;
     }
 
-    .filterButton { 
-        display: flex;
-        align-items:center;
-        margin-left: 24px;
-    }
-
-
-    .filterButton i {
-        z-index: 0;
-        position: absolute;
-        margin-left: 2px;
-        margin-right: 2px;
-        display: flex;
-        justify-content: center;
-        align-items:center;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        background-color: #DEEBFF;
-        color: #0065FC;
-    }
-
-    .filterButton p {
-        z-index: 1;
-        display: flex;
-        justify-content: center;
-        align-items:center;
-        font-size: 1,35em;
-        font-weight: 700;
-        height: 50px;
-        padding: 0px 25px 0px 63px;
-        border-radius: 50px;
-        border : solid #f2f2f2 2px;
-        background: rgba(0, 0, 0, 0);
-        transition-duration: 0.3s
-
-    }
-
-    .filterButton p:hover {
-        cursor:pointer;
-        border-top : solid #0065FC 2px;
-        border-right : solid #0065FC 2px;
-        border-bottom : solid #0065FC 2px;
-        border-left : solid #0065FC 2px;
-        background: rgba(0, 101, 252,.04);
-        font-size: 1.09em;
-    }
+/* TESSSSSSSSSSSSSSSSSSSSSSSST */
 
     /* showResultNb */
 
@@ -277,83 +265,83 @@ a:active {
 
     /* accommodations */
     
-    .accommodations {
-        display: flex;
-        margin-top: 37px;
-    }
-    .accommodationsBox {
-        background-color: #f2f2f2;
-        border-radius: 25px;
-        padding: 42px 40px 46px 40px ;
-    }
+        .accommodations {
+            display: flex;
+            margin-top: 37px;
+        }
+        .accommodationsBox {
+            background-color: #f2f2f2;
+            border-radius: 25px;
+            padding: 42px 40px 46px 40px ;
+        }
 
-    .accommodationsBox:nth-of-type(1){
-        flex: 7;
-        margin-right: 20px;
-    }
+        .accommodationsBox:nth-of-type(1){
+            flex: 7;
+            margin-right: 20px;
+        }
 
-    .accommodationsBox:nth-of-type(2) {
-        flex: 3;
-    }
+        .accommodationsBox:nth-of-type(2) {
+            flex: 3;
+        }
 
     /* Cards */
 
-    .cards {
-        display: flex;
-        flex-direction: column;
-        align-self: flex-end;
-        width: 235px;
-        background-color: white;
-        border-radius: 25px;
-        border: solid white 5px;
-        box-shadow: 0px 5px 10px rgb(187, 186, 186);
-        margin-top: 15px;
-        margin-bottom: 15px;
-    }
-    
-    .cards img {
-        border-radius: 20px 20px 0px 0px;
-        width: 100%;
-        height: 114px;
-        object-fit: cover;
-    }
+        .cards {
+            display: flex;
+            flex-direction: column;
+            align-self: flex-end;
+            width: 235px;
+            background-color: white;
+            border-radius: 25px;
+            border: solid white 5px;
+            box-shadow: 0px 5px 10px rgb(187, 186, 186);
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
+        
+        .cards img {
+            border-radius: 20px 20px 0px 0px;
+            width: 100%;
+            height: 114px;
+            object-fit: cover;
+        }
 
-    .cards h2 {
-        font-size: 1.2em;
-        margin-top: 10px;
-    }
+        .cards h2 {
+            font-size: 1.2em;
+            margin-top: 10px;
+        }
 
-    .cards .text {
-        display: flex;
-        flex-direction: column;
-        width: 235px;
-        margin: 0px 8px 0px 8px;
-    }
+        .cards .text {
+            display: flex;
+            flex-direction: column;
+            width: 235px;
+            margin: 0px 8px 0px 8px;
+        }
 
-    .cards .stars {
-        display: flex;
-    }
+        .cards .stars {
+            display: flex;
+        }
 
-    .cards .stars i {
-        display: block;
-        font-size: .75em;
-        margin-right:2px;
+        .cards .stars i {
+            display: block;
+            font-size: .75em;
+            margin-right:2px;
 
-    }
+        }
 
-    .cards .stars .blue i{
-        color: #0065FC;
-    }
+        .cards .stars .blue i{
+            color: #0065FC;
+        }
 
-    .cards .stars .grey i{
-        color: #d9d9d9;
-    }
+        .cards .stars .grey i{
+            color: #d9d9d9;
+        }
 
     /* Accommodation Available */
     .accommodationAvailable {
         display: flex;
         flex-wrap: wrap;
-        justify-content:space-between;
+        justify-content:space-evenly;
         margin-bottom: 27px;     
     }
 
@@ -430,7 +418,7 @@ a:active {
 
 /* Activities */
 
-    #activities {
+    #section3 {
         margin-top: 61px;
     }
 
@@ -522,7 +510,7 @@ a:active {
         width:100%;
         }
 
-    header, #sectionSearchCity, #results, #activities, footer {
+    header, #section1, #section2, #section3, footer {
         padding: 0 10% 0 10%;
     }
 
@@ -551,21 +539,18 @@ a:active {
         height: 51px;
         border-radius: 15px;
     }
-        span.texte {
+        span.web {
             display:none;
         }
-        span.icon {
-            display:inline-block;
+        span.mobile {
+            display:flex;
+            justify-content: center;
+            align-items: center;
         }
 
 
         /* RESULT */
         
-        .filter {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-        }
         .filter h2 {
             width: 100%;
             margin-bottom: 12px;
@@ -573,14 +558,8 @@ a:active {
         }
 
         .filter p {
-            margin: 7px 0 6px 0;
             font-size: .93em;
         }
-
-        .filterButton {
-            margin:0;
-        }
-
 
         .showResultNb {
             align-items: baseline;
