--- a/style.css
+++ b/style.css
@@ -280,6 +280,8 @@ a:active {
         .accommodations {
             display: flex;
             margin-top: 37px;
+            width: 93%;
+            max-width: 1340px;
         }
         .accommodationsBox {
             background-color: #f2f2f2;
@@ -350,20 +352,20 @@ a:active {
         }
 
     /* Accommodation Available */
-    .accommodationAvailable {
+    #accommodationAvailable {
         display: flex;
         flex-wrap: wrap;
         justify-content:space-evenly;
         margin-bottom: 27px;     
     }
 
-    .accommodationAvailable .cards p {
+    #accommodationAvailable .cards p {
         margin-top: 12px;
     }
 
         /* Accommodation Available Cards*/
 
-        .accommodationAvailable .cards .stars{
+        #accommodationAvailable .cards .stars{
             margin-top : 8px;
             margin-bottom: 7px;
         }
@@ -378,7 +380,7 @@ a:active {
 
             .accommodationsBox a:hover {
                 color: #0065FC;
-                text-decoration:underline;
+                text-decoration:none;
             }
     
     /* Accommodation Popular */
@@ -636,10 +638,12 @@ a:active {
         .accommodations {
             display: flex;
             flex-direction: column-reverse;
+            width: 100%;
         }
 
         .accommodationsBox {
             border-radius: 0px;
+            
         }
 
         .accommodationsBox:nth-of-type(1){
@@ -664,5 +668,9 @@ a:active {
 
         .accommodationAvailable .cards {
             width: 323px;
+        }
+
+        .accommodationsBox {
+            background-color: #f2f2f2;
         }
 }
