--- a/style.css
+++ b/style.css
@@ -439,45 +439,45 @@ a:active {
     .activitiesBox {
         display: flex;
         justify-content: space-between;
-        width: 100%;
         margin-top: 20px;
     }
 
-    .activitiesBox .cards{
-        width: 302px;
-        border:none;
-        margin: 0;
+    .activitiesColumn {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;      
     }
 
-    .activitiesBox h2{
+    .activitiesCards {
+        width: 302px;
+        box-shadow: 0px 5px 10px rgb(187, 186, 186);
+        border-radius: 20px 20px 20px 20px;
+        display: flex;
+        flex-direction: column;
+        height: 450px;
+    }
+
+    .activitiesColumn:nth-child(2) .activitiesCards:nth-child(1) {
+        height: 236px;
+    }
+
+    .activitiesColumn:nth-child(2) .activitiesCards:nth-child(2) {
+        height: 165px;
+    }
+
+    .activitiesColumn:nth-child(4) .activitiesCards {
+        height: 195px;
+    }
+
+    .activitiesCards h2{
         margin: 23px 20px 20px 20px;
         font-size: 1em;
     }
 
-    .activitiesBox .column1 .cards img {
-        height: 390px;
-    }
-
-    .activitiesBox .column2, .column4  {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    .activitiesBox .column2 .cards .img1{
-        height:180px;
-    }
-
-    .activitiesBox .column2 .cards .img2{
-        height:108px;
-    }
-
-    .activitiesBox .column4 .cards .img3{
-        height:140px;
-    }
-
-    .activitiesBox .column4 .cards .img4{
-        height:153px;
+    .activitiesCards img{
+        border-radius: 20px 20px 0 0;
+        object-fit: cover;
+        height: 100%;
     }
 
 
@@ -643,6 +643,7 @@ a:active {
 
         .accommodationsBox {
             border-radius: 0px;
+            background-color: #f2f2f2;
             
         }
 
@@ -670,7 +671,22 @@ a:active {
             width: 323px;
         }
 
-        .accommodationsBox {
-            background-color: #f2f2f2;
+        .activitiesBox {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            margin-top: 20px;
         }
-}
+
+        .activitiesCards {
+            width: 100%;
+            height: 100%;
+            margin-top: 24px;
+        }
+
+        .activitiesCards img{
+            height: 192px;
+        }
+    }
+
