--- a/style.css
+++ b/style.css
@@ -250,8 +250,6 @@ a:active {
         font-size: 1.25em;
     }
 
-/* TESSSSSSSSSSSSSSSSSSSSSSSST */
-
     /* showResultNb */
 
     .showResultNb {
@@ -438,6 +436,7 @@ a:active {
 
     .activitiesBox {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         margin-top: 20px;
     }
@@ -455,6 +454,7 @@ a:active {
         display: flex;
         flex-direction: column;
         height: 450px;
+        margin: 10px;
     }
 
     .activitiesColumn:nth-child(2) .activitiesCards:nth-child(1) {
@@ -518,6 +518,50 @@ a:active {
         margin-top: 15px;
         font-size: 0.9em;
     }
+
+
+
+
+/* TABLET CSS of RESERVIA Page */
+
+@media screen and (max-width: 1400px) {
+    .accommodations {
+        flex-direction: column;
+    }
+
+    .accommodationsBox:nth-of-type(1){
+        margin-right: 0px;
+    }
+
+    .accommodationsBox:nth-of-type(2) {
+        margin-top: 50px;
+    }
+
+    #accommodationAvailable {
+        justify-content: flex-center;
+    }
+
+    #accommodationAvailable .cards {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .activitiesColumn {
+        width: 25%;
+    }
+    .activitiesCards {
+        width: auto;
+    }
+
+    .accommodationPopular {
+        justify-content: center;
+    }
+
+    .accommodationPopular .cards{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+}
 
 /* MOBILE CSS of RESERVIA Page */
 
@@ -669,6 +713,8 @@ a:active {
 
         .accommodationPopular .cards {
             width: 100%;
+            margin-left: 0px;
+            margin-right: 0px;
         }
 
         .accommodationPopular .cards img{
@@ -689,10 +735,6 @@ a:active {
             flex-basis: 100%;
         }
 
-        .accommodationAvailable .cards {
-            width: 323px;
-        }
-
         .activitiesBox {
             display: flex;
             flex-direction: column;
@@ -701,10 +743,16 @@ a:active {
             margin-top: 20px;
         }
 
+        .activitiesColumn {
+            width: 100%;
+        }
+
         .activitiesCards {
             width: 100%;
             height: 100%;
             margin-top: 24px;
+            margin-left: 0px;
+            margin-right: 0px;
         }
 
         .activitiesCards img{
@@ -725,7 +773,8 @@ a:active {
         }
 
         #accommodationAvailable .cards{
-            width: 100%;   
+            width: 100%;
+            margin-left: 0px;
+            margin-right: 0px;   
         }
     }
-
