--- a/style.css
+++ b/style.css
@@ -204,13 +204,16 @@ a:active {
     /* Filter */
     #section2 {
         margin-top:17px;
+        width: 93%;
+        max-width: 1340px;
 }
 
     .filter {
         display: flex;
         flex-wrap: wrap;
-        align-items: center;  
+        align-items: center;
     }
+
     .filterButton {
         display: flex;
         align-items:center;
@@ -277,8 +280,7 @@ a:active {
         .accommodations {
             display: flex;
             margin-top: 37px;
-            width: 93%;
-            max-width: 1340px;
+            width: 100%
         }
         .accommodationsBox {
             background-color: #f2f2f2;
@@ -424,7 +426,7 @@ a:active {
         }
 
         .accommodationPopular .cards .stars{
-            margin-top : 41px;
+            margin-top : 28px;
         }
 
 /* Activities */
@@ -570,9 +572,17 @@ a:active {
         width:100%;
     }
 
-    header, #section1, #section2, #section3, .footerContainer {
+    header, #section1, #section3, .footerContainer, .filter, .showResultNb {
         padding: 0 10% 0 10%;
         }
+
+    #section2 {
+        width: 100%;
+    }
+
+    #section3 {
+        margin-top: 0px;
+    }
 
     header.mobile {
         background-color: #ffff;
@@ -677,6 +687,7 @@ a:active {
             display: flex;
             flex-direction: column-reverse;
             width: 100%;
+            margin-top: 0px;
         }
 
         .accommodationsBox {
