--- a/style.css
+++ b/style.css
@@ -72,68 +72,71 @@ a:active {
     max-width: 1340px;
 }
 
-/*HEADER WEB*/
+/*HEADER*/
 
-    header.web {
-        background-color: #ffff;
+    header {
+        background-color:#ffff;
         width: 100%;
+        height: 130px;
         display: flex;
         justify-content: center;
-        position: fixed;
-        top : 0;
-        height: 130px;
-
     }
 
-    .webHeader {
-        width: 93%;
-        max-width: 1340px;
+    #headerContainer {
         display: flex;
-        justify-content: space-between;
-        align-items: inherit; 
-    }
-
-    /*official logo*/
-    .logo {
-        display: flex;
+        flex-wrap: wrap;
         align-items: center;
+        width: calc(100% - 100px);
+        max-width: 1340px;
     }
 
-    /*navigation bar*/
-    nav.web ul {
+    #subscribe {
+        order : 3;
+        align-self: flex-start;
+        margin-left: 38px;
+    }
+
+    #subscribe h2{
+        font-size: 1em;
+        color: #0065FC;
+        padding : 48px 28px 0px 28px
+    }
+
+    #subscribe h2:hover{
+        text-decoration: underline;
+    }
+
+    #logo {
+        order: 1;
+        flex-grow : 1;
+    }
+
+    nav {
         display: flex;
-        justify-content: space-between;
+        align-self: flex-start;
         margin-top: 50px;
+        order : 2;
     }
 
-
-    nav.web a {
+    nav a {
         margin-left: 12px;
         padding : 48px 28px 0px 28px
     }
 
-    nav.web a:hover {
+    nav a:hover {
         border-top : solid #0065FC 2px;
     }
 
-    .subscribeLink a {
-        color:#0065FC;
-        font-weight: 700;
-    }
-
-/*-- Section 1 Search A City */
+/*Search Bar*/
 
     #section1 {
         display: flex;
         flex-direction: column;
-        margin-top: 130px;
     }
 
     #section1 p {
         margin-top: 8px ;
     }
-
-/*Search Bar*/
     
     .searchBarContainer {
         display: flex;
@@ -558,7 +561,7 @@ a:active {
 
 /* MOBILE CSS of RESERVIA Page */
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 723px) {
 
     .web {
         display: none;
@@ -584,52 +587,68 @@ a:active {
         margin-top: 0px;
     }
 
-    header.mobile {
-        background-color: #ffff;
-        width: 100%;
+/* HEADER MOBILE */
+    
+    #headerContainer {
         display: flex;
-        flex-direction: column;
+        flex-wrap: wrap;
         align-items: center;
-        position: fixed;
-        top : 0;
-        height: 132px;
-    }
-
-    .mobileHeader {
-        width: 93%;
-        display: flex;
         justify-content: space-between;
-        align-items: center;
-        height : 100%
-    }
-
-    nav.mobile {
         width: 100%;
-        height: 45px;
     }
 
-    nav.mobile ul {
-        display: flex;
-        justify-content: space-evenly;
-        height: 45px;
+    #subscribe {
+        order : 2;
+        margin-left: 0px;
+        align-self: auto;
+        margin-top : 30px;
+        margin-right: 20px;
+    }
+
+    #subscribe h2{
+        font-size: 1em;
+        color: #0065FC;
+        padding : 0px 0px 0px 0px;
+    }
+
+    #subscribe h2:hover{
+        text-decoration: underline;
+    }
+
+    #logo {
+        flex-grow : 0;
+        margin-top : 30px;
+        margin-left: 20px;
 
     }
 
-
-    nav.mobile li {
+    nav {
         display: flex;
+        justify-content: space-around;
+        margin-top: 30px;
+        order : 2;
         width: 100%;
+    }
+
+    nav li {
+        width: 100%;
+    }
+
+    nav a {
+        display: flex;
         justify-content: center;
-        border-bottom: solid #f2f2f2 3px;
-
+        margin-left: 0px;
+        padding: 0px 0px 13px 0px;
+        border-bottom : solid #f2f2f2 3px;
     }
 
-    nav.mobile li:hover {
-        border-bottom: solid #0065FC 3px;
+    nav a:hover {
+        border-top : none;
+        border-bottom : solid #0065FC 3px;
     }
 
     #section1 {
-        margin-top: 163px;
+        margin-top: 45px;
     }
 
     #section1 p {
